syntax = "proto3";

package podkrepibg.campaign;

option csharp_namespace = "Podkrepibg.Campaigns";
option go_package = "campaign";

import "common/nomenclatures.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CampaignService {
  // creates a new campaign
  rpc CreateCampaign (CreateCampaignRequest) returns (CreateCampaignResponse);
  // list campaign
  rpc ListCampaigns (ListCampaignsRequest) returns (ListCampaignsResponse);

  rpc CampaignTypes (google.protobuf.Empty) returns (CampaignTypesReply) {};

  rpc FilterCampaigns (FilterCampaignsRequest) returns (FilterCampaignsReply) {}
}

message CreateCampaignRequest {

	string initiatorId = 1;

	string operatorId = 2;

	string beneficiaryId = 3;
}

// The response message containing the greetings.
message NewCampaignReply {
	
	string campaignId = 1;

	string initiatorId = 2;

	string operatorId = 3;

	string beneficiaryId = 4;

	common.nomenclatures.CampaignState state = 5;
}

message CampaignTypesReply {
	repeated CampaignType campaignTypes = 1;
}

message CampaignType {
	
	string campaignTypeId = 1;

	string campaignTypeName = 2;

	string campaignTypeDescr = 3;

	repeated CampaignSubType subTypes = 4;
}

message CampaignSubType {
	
	string campaignSubTypeId = 1;

	string campaignSubTypeName = 2;

	string campaignSubTypeDescr = 3; 
}

message FilterCampaignsRequest {

	CampaignType campaignTypes = 1;

	CampaignSubType campaignSubTypes = 2;

	common.nomenclatures.CampaignState state = 3;

	string operatorId = 4;

	string initiatorId = 5;

	string beneficiaryId = 6;
}

message FilterCampaignsReply {
	
	string campaignId = 1;

	string initiatorId = 2;

	string operatorId = 3;

	string beneficiaryId = 4;

	common.nomenclatures.CampaignState state = 5;

	CampaignType campaignTypes = 6;

	CampaignSubType campaignSubTypes = 7;

	string title = 8;

	string shortDescription = 9;

	string fullDescription = 10;

	uint32 targetAmount = 11;

	common.nomenclatures.CurrencyCode currency = 12;

	uint32 raisedFunds = 13;

	uint32 payedOut = 14;

	repeated Donation donations = 15;
}

message CreateCampaignResponse {
  string id = 1;
  string name = 2;
  string organizerId = 3;
}

message ListCampaignsRequest {
}

message ListCampaignsResponse {
  repeated CreateCampaignResponse campaigns = 1;
message Donation {
	string donorDisplayName = 1;
	uint32 amount = 2;
	string message = 3;
	google.protobuf.Timestamp date = 4;
}
