syntax = "proto3";

option csharp_namespace = "Podkrepibg.Nomenclatures";
option go_package = "common.nomenclatures";

package podkrepibg.common.nomenclatures;

enum CampaignState
{
	UndefinedCampaign = 0;

	Draft = 1;

	PendingValidation = 2;

	Approved = 3;

	Rejected = 4;

	Active = 5;

	ActivePendingValidation = 6;

	Suspended = 7;

	Complete = 8;

	Disabled = 9;

	Error = 10;
}

enum ISO2CountryCode {
	UNDEFINED_ISO2_CODE = 0;
	AD = 1;
	AE = 2;
	AF = 3;
	AG = 4;
	AI = 5;
	AL = 6;
	AM = 7;
	AO = 8;
	AQ = 9;
	AR = 10;
	AS = 11;
	AT = 12;
	AU = 13;
	AW = 14;
	AX = 15;
	AZ = 16;
	BA = 17;
	BB = 18;
	BD = 19;
	BE = 20;
	BF = 21;
	BG = 22;
	BH = 23;
	BI = 24;
	BJ = 25;
	BL = 26;
	BM = 27;
	BN = 28;
	BO = 29;
	BQ = 30;
	BR = 31;
	BS = 32;
	BT = 33;
	BV = 34;
	BW = 35;
	BY = 36;
	BZ = 37;
	CA = 38;
	CC = 39;
	CD = 40;
	CF = 41;
	CG = 42;
	CH = 43;
	CI = 44;
	CK = 45;
	CL = 46;
	CM = 47;
	CN = 48;
	CO = 49;
	CR = 50;
	CU = 51;
	CV = 52;
	CW = 53;
	CX = 54;
	CY = 55;
	CZ = 56;
	DE = 57;
	DJ = 58;
	DK = 59;
	DM = 60;
	DO = 61;
	DZ = 62;
	EC = 63;
	EE = 64;
	EG = 65;
	EH = 66;
	ER = 67;
	ES = 68;
	ET = 69;
	FI = 70;
	FJ = 71;
	FK = 72;
	FM = 73;
	FO = 74;
	FR = 75;
	GA = 76;
	GB = 77;
	GD = 78;
	GE = 79;
	GF = 80;
	GG = 81;
	GH = 82;
	GI = 83;
	GL = 84;
	GM = 85;
	GN = 86;
	GP = 87;
	GQ = 88;
	GR = 89;
	GS = 90;
	GT = 91;
	GU = 92;
	GW = 93;
	GY = 94;
	HK = 95;
	HM = 96;
	HN = 97;
	HR = 98;
	HT = 99;
	HU = 100;
	ID = 101;
	IE = 102;
	IL = 103;
	IM = 104;
	IN = 105;
	IO = 106;
	IQ = 107;
	IR = 108;
	IS = 109;
	IT = 110;
	JE = 111;
	JM = 112;
	JO = 113;
	JP = 114;
	KE = 115;
	KG = 116;
	KH = 117;
	KI = 118;
	KM = 119;
	KN = 120;
	KP = 121;
	KR = 122;
	KW = 123;
	KY = 124;
	KZ = 125;
	LA = 126;
	LB = 127;
	LC = 128;
	LI = 129;
	LK = 130;
	LR = 131;
	LS = 132;
	LT = 133;
	LU = 134;
	LV = 135;
	LY = 136;
	MA = 137;
	MC = 138;
	MD = 139;
	ME = 140;
	MF = 141;
	MG = 142;
	MH = 143;
	MK = 144;
	ML = 145;
	MM = 146;
	MN = 147;
	MO = 148;
	MP = 149;
	MQ = 150;
	MR = 151;
	MS = 152;
	MT = 153;
	MU = 154;
	MV = 155;
	MW = 156;
	MX = 157;
	MY = 158;
	MZ = 159;
	NA = 160;
	NC = 161;
	NE = 162;
	NF = 163;
	NG = 164;
	NI = 165;
	NL = 166;
	NO = 167;
	NP = 168;
	NR = 169;
	NU = 170;
	NZ = 171;
	OM = 172;
	PA = 173;
	PE = 174;
	PF = 175;
	PG = 176;
	PH = 177;
	PK = 178;
	PL = 179;
	PM = 180;
	PN = 181;
	PR = 182;
	PS = 183;
	PT = 184;
	PW = 185;
	PY = 186;
	QA = 187;
	RE = 188;
	RO = 189;
	RS = 190;
	RU = 191;
	RW = 192;
	SA = 193;
	SB = 194;
	SC = 195;
	SD = 196;
	SE = 197;
	SG = 198;
	SH = 199;
	SI = 200;
	SJ = 201;
	SK = 202;
	SL = 203;
	SM = 204;
	SN = 205;
	SO = 206;
	SR = 207;
	SS = 208;
	ST = 209;
	SV = 210;
	SX = 211;
	SY = 212;
	SZ = 213;
	TC = 214;
	TD = 215;
	TF = 216;
	TG = 217;
	TH = 218;
	TJ = 219;
	TK = 220;
	TL = 221;
	TM = 222;
	TN = 223;
	TO = 224;
	TR = 225;
	TT = 226;
	TV = 227;
	TW = 228;
	TZ = 229;
	UA = 230;
	UG = 231;
	UM = 232;
	US = 233;
	UY = 234;
	UZ = 235;
	VA = 236;
	VC = 237;
	VE = 238;
	VG = 239;
	VI = 240;
	VN = 241;
	VU = 242;
	WF = 243;
	WS = 244;
	YE = 245;
	YT = 246;
	ZA = 247;
	ZM = 248;
	ZW = 249;
}

/*enum ISO3CountryCode {
	UNDEFINED_ISO3_CODE = 0;
	AND = 1;
	ARE = 2;
	AFG = 3;
	ATG = 4;
	AIA = 5;
	ALB = 6;
	ARM = 7;
	AGO = 8;
	ATA = 9;
	ARG = 10;
	ASM = 11;
	AUT = 12;
	AUS = 13;
	ABW = 14;
	ALA = 15;
	AZE = 16;
	BIH = 17;
	BRB = 18;
	BGD = 19;
	BEL = 20;
	BFA = 21;
	BGR = 22;
	BHR = 23;
	BDI = 24;
	BEN = 25;
	BLM = 26;
	BMU = 27;
	BRN = 28;
	BOL = 29;
	BES = 30;
	BRA = 31;
	BHS = 32;
	BTN = 33;
	BVT = 34;
	BWA = 35;
	BLR = 36;
	BLZ = 37;
	CAN = 38;
	CCK = 39;
	COD = 40;
	CAF = 41;
	COG = 42;
	CHE = 43;
	CIV = 44;
	COK = 45;
	CHL = 46;
	CMR = 47;
	CHN = 48;
	COL = 49;
	CRI = 50;
	CUB = 51;
	CPV = 52;
	CUW = 53;
	CXR = 54;
	CYP = 55;
	CZE = 56;
	DEU = 57;
	DJI = 58;
	DNK = 59;
	DMA = 60;
	DOM = 61;
	DZA = 62;
	ECU = 63;
	EST = 64;
	EGY = 65;
	ESH = 66;
	ERI = 67;
	ESP = 68;
	ETH = 69;
	FIN = 70;
	FJI = 71;
	FLK = 72;
	FSM = 73;
	FRO = 74;
	FRA = 75;
	GAB = 76;
	GBR = 77;
	GRD = 78;
	GEO = 79;
	GUF = 80;
	GGY = 81;
	GHA = 82;
	GIB = 83;
	GRL = 84;
	GMB = 85;
	GIN = 86;
	GLP = 87;
	GNQ = 88;
	GRC = 89;
	SGS = 90;
	GTM = 91;
	GUM = 92;
	GNB = 93;
	GUY = 94;
	HKG = 95;
	HMD = 96;
	HND = 97;
	HRV = 98;
	HTI = 99;
	HUN = 100;
	IDN = 101;
	IRL = 102;
	ISR = 103;
	IMN = 104;
	IND = 105;
	IOT = 106;
	IRQ = 107;
	IRN = 108;
	ISL = 109;
	ITA = 110;
	JEY = 111;
	JAM = 112;
	JOR = 113;
	JPN = 114;
	KEN = 115;
	KGZ = 116;
	KHM = 117;
	KIR = 118;
	COM = 119;
	KNA = 120;
	PRK = 121;
	KOR = 122;
	KWT = 123;
	CYM = 124;
	KAZ = 125;
	LAO = 126;
	LBN = 127;
	LCA = 128;
	LIE = 129;
	LKA = 130;
	LBR = 131;
	LSO = 132;
	LTU = 133;
	LUX = 134;
	LVA = 135;
	LBY = 136;
	MAR = 137;
	MCO = 138;
	MDA = 139;
	MNE = 140;
	MAF = 141;
	MDG = 142;
	MHL = 143;
	MKD = 144;
	MLI = 145;
	MMR = 146;
	MNG = 147;
	MAC = 148;
	MNP = 149;
	MTQ = 150;
	MRT = 151;
	MSR = 152;
	MLT = 153;
	MUS = 154;
	MDV = 155;
	MWI = 156;
	MEX = 157;
	MYS = 158;
	MOZ = 159;
	NAM = 160;
	NCL = 161;
	NER = 162;
	NFK = 163;
	NGA = 164;
	NIC = 165;
	NLD = 166;
	NOR = 167;
	NPL = 168;
	NRU = 169;
	NIU = 170;
	NZL = 171;
	OMN = 172;
	PAN = 173;
	PER = 174;
	PYF = 175;
	PNG = 176;
	PHL = 177;
	PAK = 178;
	POL = 179;
	SPM = 180;
	PCN = 181;
	PRI = 182;
	PSE = 183;
	PRT = 184;
	PLW = 185;
	PRY = 186;
	QAT = 187;
	REU = 188;
	ROU = 189;
	SRB = 190;
	RUS = 191;
	RWA = 192;
	SAU = 193;
	SLB = 194;
	SYC = 195;
	SDN = 196;
	SWE = 197;
	SGP = 198;
	SHN = 199;
	SVN = 200;
	SJM = 201;
	SVK = 202;
	SLE = 203;
	SMR = 204;
	SEN = 205;
	SOM = 206;
	SUR = 207;
	SSD = 208;
	STP = 209;
	SLV = 210;
	SXM = 211;
	SYR = 212;
	SWZ = 213;
	TCA = 214;
	TCD = 215;
	ATF = 216;
	TGO = 217;
	THA = 218;
	TJK = 219;
	TKL = 220;
	TLS = 221;
	TKM = 222;
	TUN = 223;
	TON = 224;
	TUR = 225;
	TTO = 226;
	TUV = 227;
	TWN = 228;
	TZA = 229;
	UKR = 230;
	UGA = 231;
	UMI = 232;
	USA = 233;
	URY = 234;
	UZB = 235;
	VAT = 236;
	VCT = 237;
	VEN = 238;
	VGB = 239;
	VIR = 240;
	VNM = 241;
	VUT = 242;
	WLF = 243;
	WSM = 244;
	YEM = 245;
	MYT = 246;
	ZAF = 247;
	ZMB = 248;
	ZWE = 249;
}*/

enum CurrencyCode {
	UNDEFINED_CURRENCY = 0;
	AED = 1;
	AFN = 2;
	ALL = 3;
	AMD = 4;
	ANG = 5;
	AOA = 6;
	ARS = 7;
	AUD = 8;
	AWG = 9;
	AZN = 10;
	BAM = 11;
	BBD = 12;
	BDT = 13;
	BGN = 14;
	BHD = 15;
	BIF = 16;
	BMD = 17;
	BND = 18;
	BOB = 19;
	BOV = 20;
	BRL = 21;
	BSD = 22;
	BTN = 23;
	BWP = 24;
	BYN = 25;
	BZD = 26;
	CAD = 27;
	CDF = 28;
	CHE = 29;
	CHF = 30;
	CHW = 31;
	CLF = 32;
	CLP = 33;
	CNY = 34;
	COP = 35;
	COU = 36;
	CRC = 37;
	CUC = 38;
	CUP = 39;
	CVE = 40;
	CZK = 41;
	DJF = 42;
	DKK = 43;
	DOP = 44;
	DZD = 45;
	EGP = 46;
	ERN = 47;
	ETB = 48;
	EUR = 49;
	FJD = 50;
	FKP = 51;
	GBP = 52;
	GEL = 53;
	GHS = 54;
	GIP = 55;
	GMD = 56;
	GNF = 57;
	GTQ = 58;
	GYD = 59;
	HKD = 60;
	HNL = 61;
	HRK = 62;
	HTG = 63;
	HUF = 64;
	IDR = 65;
	ILS = 66;
	INR = 67;
	IQD = 68;
	IRR = 69;
	ISK = 70;
	JMD = 71;
	JOD = 72;
	JPY = 73;
	KES = 74;
	KGS = 75;
	KHR = 76;
	KMF = 77;
	KPW = 78;
	KRW = 79;
	KWD = 80;
	KYD = 81;
	KZT = 82;
	LAK = 83;
	LBP = 84;
	LKR = 85;
	LRD = 86;
	LSL = 87;
	LYD = 88;
	MAD = 89;
	MDL = 90;
	MGA = 91;
	MKD = 92;
	MMK = 93;
	MNT = 94;
	MOP = 95;
	MRU = 96;
	MUR = 97;
	MVR = 98;
	MWK = 99;
	MXN = 100;
	MXV = 101;
	MYR = 102;
	MZN = 103;
	NAD = 104;
	NGN = 105;
	NIO = 106;
	NOK = 107;
	NPR = 108;
	NZD = 109;
	OMR = 110;
	PAB = 111;
	PEN = 112;
	PGK = 113;
	PHP = 114;
	PKR = 115;
	PLN = 116;
	PYG = 117;
	QAR = 118;
	RON = 119;
	RSD = 120;
	RUB = 121;
	RWF = 122;
	SAR = 123;
	SBD = 124;
	SCR = 125;
	SDG = 126;
	SEK = 127;
	SGD = 128;
	SHP = 129;
	SLL = 130;
	SOS = 131;
	SRD = 132;
	SSP = 133;
	STN = 134;
	SVC = 135;
	SYP = 136;
	SZL = 137;
	THB = 138;
	TJS = 139;
	TMT = 140;
	TND = 141;
	TOP = 142;
	TRY = 143;
	TTD = 144;
	TWD = 145;
	TZS = 146;
	UAH = 147;
	UGX = 148;
	USD = 149;
	USN = 150;
	UYI = 151;
	UYU = 152;
	UYW = 153;
	UZS = 154;
	VES = 155;
	VND = 156;
	VUV = 157;
	WST = 158;
	XAF = 159;
	XAG = 160;
	XAU = 161;
	XBA = 162;
	XBB = 163;
	XBC = 164;
	XBD = 165;
	XCD = 166;
	XDR = 167;
	XOF = 168;
	XPD = 169;
	XPF = 170;
	XPT = 171;
	XSU = 172;
	XTS = 173;
	XUA = 174;
	XXX = 175;
	YER = 176;
	ZAR = 177;
	ZMW = 178;
	ZWL = 179;
}

enum BeneficiaryType{
  Individual = 0;

  Organisation = 1
}
